Should ensure the body always has a wrap of 21px so we always have viewable form elements.  Make sure to use the proper (hopefully) phpfpm element in case of ubuntu and php7.0
git-svn-id: https://svn.code.sf.net/p/freeghost/code/trunk@5264 71f96598-fa45-0410-b640-bcd6f8691b32

--- a/packages/web/management/css/default/fog.css
+++ b/packages/web/management/css/default/fog.css
@@ -19,7 +19,7 @@ html, body {
     height: 100%;
 }
 body {
-    margin: 0;
+    margin: 21px;
     padding: 0;
     background: #fff url('images/body-bkg.gif') repeat-x;
     font-family: Ubuntu, Arial, Helvetica, sans-serif;
